Fixing word spacing

--- a/Styles/Home.css
+++ b/Styles/Home.css
@@ -57,7 +57,8 @@ header .info a{
 /*Container-1 Styles*/
 .container-1{
     display: block;
-    text-align: left;
+    text-align: justify;
+    word-break: break-all;
 
     margin: auto;
     padding: 20px;
@@ -159,7 +160,8 @@ header .info a{
 /*Container-3 Styles*/
 .container-3{
     display: block;
-    text-align: left;
+    text-align: justify;
+    word-break: break-all;
 
     margin: auto;
     padding: 40px 0 10px 0;
